# PEA-project

./: .gitignore  CMakeLists.txt  algorithms.cpp  algorithms.h  badania.bat  config.txt  config_backup.txt  main.cpp  utils.cpp  utils.h
data/atsp/: matrix_10x10.atsp  matrix_10x10_01.atsp  matrix_10x10_02.atsp  matrix_10x10_03.atsp  matrix_10x10_04.atsp  matrix_10x10_05.atsp  matrix_10x10_06.atsp  (+221 more)
results/: bf_atsp.csv  bf_tsp.csv  faza1_BB_BEST_atsp.csv  faza1_BB_BEST_tsp.csv  faza1_BB_BFS_atsp.csv  faza1_BB_BFS_tsp.csv  faza1_BB_DFS_atsp.csv  faza1_BB_DFS_tsp.csv  faza2_BB_BEST_UB_INF_atsp.csv  faza2_BB_BEST_UB_INF_tsp.csv  faza2_BB_BEST_UB_NN_atsp.csv  faza2_BB_BEST_UB_NN_tsp.csv  faza2_BB_BEST_UB_RAND_atsp.csv  faza2_BB_BEST_UB_RAND_tsp.csv  faza2_BB_BEST_UB_RNN_NO_TIES_atsp.csv  faza2_BB_BEST_UB_RNN_NO_TIES_tsp.csv  faza2_BB_BEST_UB_RNN_TIES_atsp.csv  faza2_BB_BEST_UB_RNN_TIES_tsp.csv  faza2_BB_BEST_UB_RNN_atsp.csv  faza2_BB_BEST_UB_RNN_tsp.csv  faza2_BB_BFS_UB_NN_atsp.csv  faza2_BB_BFS_UB_NN_tsp.csv  faza2_BB_BFS_UB_RAND_atsp.csv  faza2_BB_BFS_UB_RAND_tsp.csv  faza2_BB_BFS_UB_RNN_NO_TIES_atsp.csv  faza2_BB_BFS_UB_RNN_NO_TIES_tsp.csv  faza2_BB_BFS_UB_RNN_atsp.csv  faza2_BB_BFS_UB_RNN_tsp.csv  faza2_BB_DFS_UB_INF_atsp.csv  faza2_BB_DFS_UB_INF_tsp.csv  faza2_BB_DFS_UB_NN_atsp.csv  faza2_BB_DFS_UB_NN_tsp.csv  faza2_BB_DFS_UB_RAND_atsp.csv  faza2_BB_DFS_UB_RAND_tsp.csv  faza2_BB_DFS_UB_RNN_NO_TIES_atsp.csv  faza2_BB_DFS_UB_RNN_NO_TIES_tsp.csv  faza2_BB_DFS_UB_RNN_TIES_atsp.csv  faza2_BB_DFS_UB_RNN_TIES_tsp.csv  faza2_BB_DFS_UB_RNN_atsp.csv  faza2_BB_DFS_UB_RNN_tsp.csv  (+37 more)
(+241 files in other folders)
